# Enoch

./: .gitignore
auth/: Cargo.toml
auth/examples/: auth_test.rs
auth/src/: authpak.rs  des9.rs  lib.rs  p9sk1.rs
client/: draw-test.html  index.html  package-lock.json  package.json  tsconfig.json
client/src/: main.ts  transport.ts
client/src/9p/: client.ts  fid.ts  messages.ts  types.ts
client/src/devices/: cons.ts  draw.ts  mouse.ts
client/src/draw/: index.ts  protocol.ts  renderer.ts  types.ts
client/src/input/: keyboard.ts
client/src/ui/: terminal.ts
enoch-docs/: 9P-PROTOCOL.md  CONTENTS.md  OVERVIEW.md  PHASE1-CONSOLE.md  PHASE2-AUTH.md  PHASE3-DRAW.md  TRAMPOLINE.md  TYPESCRIPT-API.md  WEBSOCKET-FRAMING.md
trampoline/: enoch.c  mkfile
